--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,17 @@
 [project]
 name = "homework-deployer"
-version = "0.1.0"
+version = "1.0.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "gitpython>=3.1.45",
+    "pydantic>=2.11.9",
+]
+
+[dependency-groups]
+dev = [
+    "flake8>=7.3.0",
+    "mypy>=1.18.2",
+    "pylint>=3.3.8",
+]
