--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "complexipy>=4.2.0",
     "flake8>=7.3.0",
     "mypy>=1.18.2",
     "pylint>=3.3.8",
