--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "complexipy>=4.2.0",
+    "coverage>=7.10.7",
     "flake8>=7.3.0",
     "mypy>=1.18.2",
     "pylint>=3.3.8",
